@@ -1,3 +1,4 @@
+Version 3 	 2010-05-06 	 New: Automatically creating ChangeLog.txt 
 Version 2 	 2010-05-06 	 Create version.py file 
 Version 1 	 2010-05-05 	 Added mdb2sqlite 
 Version 0 	 2010-04-09 	 Initial Commit 
